apps/tailscale/kustomization/cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tailscale-router
spec:
  endpointSelector:
    matchLabels:
      app: tailscale-router
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
      rules:
        dns:
        - matchPattern: "*"
  - toCIDR:
    - 192.168.88.7/32
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
  - toCIDR:
    - 192.168.88.246/32
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
  - toEntities:
    - world
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
  - toEntities:
    - world
    toPorts:
    - ports:
      - port: "3478"
        protocol: UDP
